--- a/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.scss
+++ b/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.scss
@@ -42,3 +42,49 @@
         }
     }
 }
+.new-delete-popup{
+    background: #FFFFFF;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    padding: 30px;
+    .header-sec{
+        // align-items: center;
+        .title {
+            color: #202124;
+            font-weight: normal;
+            font-size: 22px;
+            line-height: 34px;
+        }
+        .close-popup{
+            text-align: right;
+            img{
+                cursor: pointer;
+                position: relative;
+                top: 6px;
+            }
+        }
+        .newTitle {
+            color: #202124;
+            // font:inter;
+            font-weight:400;
+            font-size: 22px;
+            line-height: 34px;
+        }
+    }
+    .body-info{
+        color: #605E5C;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        margin: 20px 0 30px 0;
+    }
+    .btns-data{
+        text-align: right;
+        display: flex;
+        align-items: flex-end;
+        flex-direction: row-reverse;
+        button{
+             margin-right: 10px;
+        }
+    }
+}
