--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1793,3 +1793,100 @@ ngx-simplebar {
         }
     }
 }
+
+.comments_header_dropdown_content{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 30px rgba(32, 33, 36, 0.3);
+    border-radius: 4px;
+    width: 350px;
+    padding: 0;
+    margin: 0;
+    .c-section-data{
+        perfect-scrollbar{
+            max-height: 350px;
+        }
+        .body_data{
+            padding: 0px 20px 10px 20px;
+            max-height: 350px;
+            .intial-state{
+                padding: 30px 0 20px 0;
+                color: #202124;
+                font-weight: normal;
+                font-size: 14px;
+            }
+            .c-data{
+                padding: 20px 0 10px 0;
+                border-bottom: 1px solid #E4E5E7;                              
+                .user-data{
+                    display: flex;
+                    .pro-pic{
+                        background: #FF784B;
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 100%;
+                        color: #fff;
+                        font-weight: 600;
+                        font-size: 14px;
+                        line-height: 17px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-right: 10px;
+                        flex-shrink: 0;
+                        img{
+                            width: 100%;
+                            border-radius: 100%;
+                        }
+                    }
+                    .user-name-data{
+                        .u-name{
+                            color: #000000;
+                            font-weight: 500;
+                            font-size: 14px;
+                            line-height: 17px;
+                            margin-bottom: 6px;
+                        }
+                        .u-time{
+                            color: #9AA0A6;
+                            font-weight: normal;
+                            font-size: 12px;
+                            line-height: 15px;
+                            padding-bottom: 10px;
+                        }  
+                        .info-text-user{
+                            padding: 10px 0;
+                            color: #202124;
+                            font-weight: normal;
+                            font-size: 14px;
+                        }                          
+                    }
+                }
+            }
+            .kr-sg-input-text-area{
+                margin-top: 20px;
+                .input-text{
+                    border: 0 !important;
+                    padding: 0;
+                    min-height: 50px;
+                }
+            }
+        }
+        .footer-data{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #FFFFFF;
+            box-shadow: 0px -2px 4px rgba(32, 33, 36, 0.1);
+            border-radius: 4px;
+            padding: 10px 20px;
+            .left_sec{
+                
+            }
+            .btn_sec{
+                button{
+                    margin-left: 10px;
+                }
+            }
+        }
+    }    
+}
