--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -208,7 +208,7 @@
         </div>       
       </div>
       
-      <div class="table-data-content col-6" *ngIf="!channelExist">
+      <div class="table-data-content col-6">
         <div class="content-sec active_experments">
           <div class="title-sec d-flex justify-content-between">
             <div class="title">Active Experiments</div> 
